Fixed a bug where sometimes 'fish' were getting stuck.

--- a/src/HackerNewsFish.scss
+++ b/src/HackerNewsFish.scss
@@ -11,6 +11,7 @@ body {
     height: 100vh;
     padding: 0px;
     margin: 0px;
+    background-color: #27624185;
 }
 
 a {
